--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+def PARSE_SERVER_URL = '"' + ParseServerUrl + '"' ?: '"Define Parse server url"';
+def PARSE_APPLICATION_ID = '"' + ParseApplicationID + '"' ?: '"Define Parse application ID"';
+def PARSE_CLIENT_KEY = '"' + ParseClientKey + '"' ?: '"Define Parse client key"';
+
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
@@ -11,10 +15,16 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        buildTypes.each {
+            it.buildConfigField 'String', 'PARSE_SERVER_URL', PARSE_SERVER_URL
+            it.buildConfigField 'String', 'PARSE_APPLICATION_ID', PARSE_APPLICATION_ID
+            it.buildConfigField 'String', 'PARSE_CLIENT_KEY', PARSE_CLIENT_KEY
         }
     }
 }
@@ -23,4 +33,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.parse:parse-android:1.13.1'
+    compile 'com.parse:parseinterceptors:0.0.2' // for logging API calls to LogCat
+    compile 'com.parse.bolts:bolts-android:1.+'
 }
