--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:launchMode="singleTop"
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         <activity
+            android:launchMode="singleTop"
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
@@ -29,7 +31,7 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity">
+        <activity android:launchMode="singleTop" android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -37,10 +39,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:launchMode="singleTop"
             android:name=".activities.CreateNewEventActivity"
             android:label="@string/title_activity_create_new_event"
             android:theme="@style/AppTheme" />
         <activity
+            android:launchMode="singleTop"
             android:name=".activities.EventDetailsActivity"
             android:label="@string/title_activity_event_details"
             android:parentActivityName=".activities.EventsActivity"
@@ -50,6 +54,7 @@
                 android:value=".activities.EventsActivity" />
            </activity>
         <activity
+            android:launchMode="singleTop"
             android:name=".activities.EventsActivity"
             android:label="@string/title_activity_events"
             android:parentActivityName=".activities.GroupsActivity"
@@ -58,8 +63,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.GroupsActivity" />
         </activity>
-        <activity android:name=".activities.CreateNewGroupActivity"></activity>
+        <activity android:launchMode="singleTop" android:name=".activities.CreateNewGroupActivity"></activity>
         <activity
+            android:launchMode="singleTop"
             android:name=".activities.GroupsActivity"
             android:label="@string/title_activity_groups"
             android:parentActivityName=".activities.MainActivity"
