--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.2.0'
     apt 'com.jakewharton:butterknife-compiler:8.2.0'
     compile group: 'com.github.javadev', name: 'underscore', version: '1.16'
+    compile 'com.wang.avi:library:2.1.3'
 }
