--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.2.0'
     compile group: 'com.github.javadev', name: 'underscore', version: '1.16'
     compile 'com.wang.avi:library:2.1.3'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
