--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile group: 'com.github.javadev', name: 'underscore', version: '1.16'
     compile 'com.wang.avi:library:2.1.3'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.wrapp.floatlabelededittext:library:0.0.6'
 }
