--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,9 @@ dependencies {
     compile 'com.android.support:support-v4:24.1.1'
     compile 'com.android.support:design:24.1.1'
     compile 'jp.wasabeef:glide-transformations:2.0.1'
-
+    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.8.6@aar'){
+        transitive=true
+    }
     compile 'com.jakewharton:butterknife:8.2.0'
     apt 'com.jakewharton:butterknife-compiler:8.2.0'
     compile group: 'com.github.javadev', name: 'underscore', version: '1.16'
