--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,5 @@ dependencies {
     compile 'com.wang.avi:library:2.1.3'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
+    compile 'com.android.support:cardview-v7:24.1.1'
 }
