--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
     compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.github.andyxialm:SmoothCheckBox:master'
 }
