--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,5 @@ dependencies {
     compile 'com.wrapp.floatlabelededittext:library:0.0.6'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.github.andyxialm:SmoothCheckBox:master'
+    compile 'cn.pedant.sweetalert:library:1.3'
 }
